--- a/index.html
+++ b/index.html
@@ -7,9 +7,34 @@
     <title>Step Progress Bar</title>
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+    <!-- CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="progress-container">
+            <hr class="progress-bar-front">
+            <hr class="progress-bar-back">
+            <div class="step checked">
+                <i class="fas fa-check"></i>
+                <small>Start</small>
+            </div>
+            <div class="step">
+                <i class="fas fa-times"></i>
+            </div>
+            <div class="step">
+                <i class="fas fa-times"></i>
+            </div>
+            <div class="step">
+                <i class="fas fa-times"></i>
+            </div>
+            <div class="step">
+                <i class="fas fa-times"></i>
+            </div>
+        </div>
+        <button class="btn" id="prev" disabled><i class="fas fa-arrow-left"></i></button>
+        <button class="btn" id="next"><i class="fas fa-arrow-right"></i></button>
+    </div>
     <!-- JS -->
     <script src="script.js"></script>
 </body>
